--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -13,8 +13,8 @@ main .hero-container {
 }
 
 .hero h1 {
-  max-width: 1200px;
-  margin-left: auto;
+  max-width: 400px;
+ /* margin-left: auto;*/
   margin-right: auto;
   color: white;
 }
