--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -18,8 +18,8 @@ footer .footer p {
     background:#232529;
 }
 
-.social-icons div div{
-    flex: 1;
+.social-icons div{
+    flex: 3;
     margin: 10px;
 }
 
