--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -10,6 +10,12 @@
 .cards > ul > li {
   border: 1px solid var(--dark-color);
   background-color: var(--background-color);
+  transition: background-color 0.3s ease;
+}
+
+.card > ul > li:hover{
+  background-color: var(--hover-color);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .cards .cards-card-body {
@@ -26,6 +32,6 @@
 
 .cards > ul > li img {
   width: 100%;
-  aspect-ratio: 4 / 3;
+  aspect-ratio: 7 / 3;
   object-fit: cover;
 }
