--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -13,15 +13,15 @@ footer .footer p {
   margin: 0;
 }
 .social-icons {
-    display: flex;
-    justify-content: space-between;
+/*     display: flex; */
+    justify-content: space-evenly;
     background:#232529;
     color:#fff;
 }
 
 .social-icons >div{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 .social-icons >div >div{
